Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypePriObjIntegerRetBoolean.quorum
class Main
    action Main
        Yoda<Boolean, Boolean, integer> yoda
        integer y = yoda:useForce(true, true)
        output "passed"
     end
end
