Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypeObjPriBooleanRetBooleanFail.quorum
class Main
    action Main
        Yoda<Boolean, Boolean, boolean> yoda
        integer y = yoda(true, true, 66)
     end
end
